[project]
name = "ADB shortcut interface"
version = "0.5"
description = "A simple interface for using ADB to sideload files onto android devices"
authors = [
    {name = "Kieran Wynne", email = "keewynne90@gmail.com"},
]
dependencies = [
    "pytermgui>=6.4.0",
    "toml>=0.10.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pyinstaller>=4.5.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
